5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1793_1602.log
== TEST (2019-05-30 18:02:24) 
-- CODE:
from numpy import*
t = array(eval(float(input("digite os tempos de chegada dos corredores: "))))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:02:36) 
-- CODE:
from numpy import*
t = array(eval(float(input("digite os tempos de chegada dos corredores: "))))
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:02:56) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:05:22) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
u = max(t)
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:05:41) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
u = max(t)
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:05:59) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
u = max(t)
print([max(t)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:06:10) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
u = max(t)
print([max(t)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:07:49) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
i = 0
u = max(t)
while max(t):
	i = i + 0
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:07:58) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
i = 0
u = max(t)
while max(t):
	i = i + 0
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:08:29) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
i = 0
u = max(t)
while t != 0:
	i = i + 0
	p = max(i)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:08:40) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
i = 0
u = max(t)
while t != 0:
	i = i + 0
	p = max(i)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:08:48) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
i = 0
u = max(t)
while t.all() != 0:
	i = i + 0
	p = max(i)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:08:59) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
i = 0
u = max(t)
while t.all() != 0:
	i = i + 0
	p = max(i)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:10:00) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
print(t.replace(1, "1"))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:10:14) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
print(t.replace(1, "1"))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:07) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:13:18) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
i = 0
while max(t):
	print(i[max(t)])

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:13:26) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
i = 0
while max(t):
	print(i[max(t)])

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:13:28) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
i = 0
while max(t):
	print(i[max(t)])

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:16:11) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
z = max(t)
i = 0
if t[0:] == z:
	print(t[i])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:16:26) 
-- CODE:
from numpy import*
t = array(eval(input("digite os tempos de chegada dos corredores: ")))
z = max(t)
i = 0
if t[0:] == z:
	print(t[i])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:36:46) 
-- CODE:
v = [11,22,33]
a = v[0:]
print(a)
-- OUTPUT:
[11, 22, 33]
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:36:52) 
-- CODE:
v = [11,22,33]
a = v[0:]
print(a)
-- OUTPUT:
[11, 22, 33]
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:37:12) 
-- CODE:
v = [11,22,33]
a = v[0:]
b = a == max(v)
print(a)
-- OUTPUT:
[11, 22, 33]
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:37:33) 
-- CODE:
v = [11,22,33]
a = v[0]
b = a == max(v)
print(a)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:37:41) 
-- CODE:
v = [11,22,33]
b = a == max(v)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = a == max(v)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
